--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,7 +20,10 @@ jobs:
           npm run build
     
   test:
-    runs-on: ubuntu-latest
+      - uses: actions/upload-artifact@master
+        with:
+          name: webpack artifacts
+          path: public/
     strategy:
       matrix:
         os: [ubuntu-latest, windows-2016]
@@ -37,4 +40,3 @@ jobs:
         npm test
       env:
         CI: true
-
